# flask-tutorial

./: README.md  main.py  pyproject.toml
website/: __init__.py  auth.py  databse.db  models.py  views.py
website/static/: index.js
website/templates/: base.html  home.html  login.html  sign_up.html
