[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Shannon Reid <shannon.victoria.reid@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
